--- a/src/app/orders/view-order/view-order.component.html
+++ b/src/app/orders/view-order/view-order.component.html
@@ -12,41 +12,50 @@
             <div class="row">
                 <div class="col-xs-6">
                     <address>
-    				<strong>Cliente:</strong><br>
-              {{order.client.id}} # {{order.client.name}}<br>
-              {{order.client.address}}<br>
-              {{order.client.complement}}<br>
-              {{order.client.city}} / {{order.client.uf}}<br>
-              {{order.client.email}} / {{order.client.phone}}
-    				</address>
+                        <strong>Cliente:</strong>
+                        <br> {{order.client.id}} # {{order.client.name}}
+                        <br> {{order.client.address}}
+                        <br> {{order.client.complement}}
+                        <br> {{order.client.city}} / {{order.client.uf}}
+                        <br> {{order.client.email}} / {{order.client.phone}}
+                    </address>
                 </div>
 
                 <div class="col-xs-6  text-right">
                     <address>
-    					<strong>Situação Atual:</strong><br>
-    					{{ order.status }}<br>
-    					
-    				</address>
+                        <strong>Situação Atual:</strong>
+                        <br> {{ order.status }}
+                        <br>
+                    </address>
                 </div>
 
             </div>
             <div class="row">
                 <div class="col-xs-6">
                     <address>
-    					<strong>Forma de Pagamento:</strong><br>
-    					{{ order.payment_method }}<br>
-    					
-    				</address>
+                        <strong>Atendente:</strong>
+                        <br> # {{order.user.id + ' - ' + order.user.name }}
+                        <br>
+                    </address>
+                    <address>
+                        <strong>Forma de Pagamento:</strong>
+                        <br> {{ order.payment_method }}
+                        <br>
+                    </address>
                 </div>
                 <div class="col-xs-6 text-right">
                     <address>
-    					<strong>Data de abertura:</strong><br>
-              {{order.created_at | date: "dd/MM/yyyy 'às' H:m:s"}}<br>
-              <strong>Data de saída do(s) item(s):</strong><br>
-              {{order.output | date: "dd/MM/yyyy"}}<br>
-              <strong>Data de devolução esperada:</strong><br>
-    					{{order.expected_return | date: "dd/MM/yyyy"}}<br><br>
-    				</address>
+                        <strong>Data de abertura:</strong>
+                        <br> {{order.created_at | date: "dd/MM/yyyy 'às' H:m:s"}}
+                        <br>
+                        <strong>Data de saída do(s) item(s):</strong>
+                        <br> {{order.output | date: "dd/MM/yyyy"}}
+                        <br>
+                        <strong>Data de devolução esperada:</strong>
+                        <br> {{order.expected_return | date: "dd/MM/yyyy"}}
+                        <br>
+                        <br>
+                    </address>
                 </div>
             </div>
         </div>
@@ -56,19 +65,33 @@
         <div class="col-md-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title"><strong>Descritivo de itens</strong></h3>
+                    <h3 class="panel-title">
+                        <strong>Descritivo de itens</strong>
+                    </h3>
                 </div>
                 <div class="panel-body">
                     <div class="table-responsive">
                         <table class="table table-condensed">
                             <thead>
                                 <tr>
-                                    <td><strong>#</strong></td>
-                                    <td><strong>Item</strong></td>
-                                    <td class="text-center"><strong>Tamanho</strong></td>
-                                    <td class="text-center"><strong>Diária</strong></td>
-                                    <td class="text-center"><strong>Dias</strong></td>
-                                    <td class="text-right"><strong>Total</strong></td>
+                                    <td>
+                                        <strong>#</strong>
+                                    </td>
+                                    <td>
+                                        <strong>Item</strong>
+                                    </td>
+                                    <td class="text-center">
+                                        <strong>Tamanho</strong>
+                                    </td>
+                                    <td class="text-center">
+                                        <strong>Diária</strong>
+                                    </td>
+                                    <td class="text-center">
+                                        <strong>Dias</strong>
+                                    </td>
+                                    <td class="text-right">
+                                        <strong>Total</strong>
+                                    </td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -87,7 +110,9 @@
                                     <td class="thick-line"></td>
                                     <td class="thick-line"></td>
                                     <td class="thick-line"></td>
-                                    <td class="thick-line text-center"><strong>Subtotal</strong></td>
+                                    <td class="thick-line text-center">
+                                        <strong>Subtotal</strong>
+                                    </td>
                                     <td class="thick-line text-right">{{order.subtotal | currency: "BRL"}}</td>
                                 </tr>
                                 <tr>
@@ -95,7 +120,9 @@
                                     <td class="no-line"></td>
                                     <td class="no-line"></td>
                                     <td class="no-line"></td>
-                                    <td class="no-line text-center"><strong>Desconto</strong></td>
+                                    <td class="no-line text-center">
+                                        <strong>Desconto</strong>
+                                    </td>
                                     <td class="text-right">{{order.discount | currency: "BRL"}}</td>
                                 </tr>
                                 <tr>
@@ -103,7 +130,9 @@
                                     <td class="no-line"></td>
                                     <td class="no-line"></td>
                                     <td class="no-line"></td>
-                                    <td class="no-line text-center"><strong>Multa</strong></td>
+                                    <td class="no-line text-center">
+                                        <strong>Multa</strong>
+                                    </td>
                                     <td class="text-right">{{order.fines | currency: "BRL"}}</td>
                                 </tr>
                                 <tr>
@@ -111,7 +140,9 @@
                                     <td class="no-line"></td>
                                     <td class="no-line"></td>
                                     <td class="no-line"></td>
-                                    <td class="no-line text-center"><strong>Juros</strong></td>
+                                    <td class="no-line text-center">
+                                        <strong>Juros</strong>
+                                    </td>
                                     <td class="text-right">{{order.interest | currency: "BRL"}}</td>
                                 </tr>
                                 <tr>
@@ -119,8 +150,12 @@
                                     <td class="no-line"></td>
                                     <td class="no-line"></td>
                                     <td class="no-line"></td>
-                                    <td class="no-line text-center"><strong>Total</strong></td>
-                                    <td class="text-right"><strong>{{order.total | currency: "BRL"}}</strong></td>
+                                    <td class="no-line text-center">
+                                        <strong>Total</strong>
+                                    </td>
+                                    <td class="text-right">
+                                        <strong>{{order.total | currency: "BRL"}}</strong>
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
