--- a/src/app/items/list/list.component.html
+++ b/src/app/items/list/list.component.html
@@ -34,7 +34,7 @@
                     <a [routerLink]="['sizes', item.id]" title="Tamanhos" class="btn btn-primary">
                         <i class="ti-ruler-alt-2"></i>
                     </a>
-                    <a (click)="openModal(template, item.id)" title="Excluir" class="btn btn-danger">
+                    <a (click)="openModal(template, item)" title="Excluir" class="btn btn-danger">
                         <i class="fa fa-trash"></i>
                     </a>
                 </td>
@@ -45,7 +45,7 @@
 
 <ng-template #template>
     <div class="modal-body text-center">
-        <p>Deseja mesmo excluir o item?</p>
+        <p>Deseja mesmo excluir o item "{{ refId.label }}"?</p>
         <button type="button" class="btn btn-danger" (click)="confirmDelete()">Sim</button>
         <button type="button" class="btn btn-primary" (click)="modalRef.hide()">Não</button>
     </div>
