--- a/src/app/items/upload-images/upload-images.component.html
+++ b/src/app/items/upload-images/upload-images.component.html
@@ -9,7 +9,7 @@
 <div class="content">
   <div class="row">
     <div class="col-md-12">
-        <h3>Imagens do item</h3>
+        <h3>Imagens do item (270x405 pixels)</h3>
     </div>
     <div class="col-md-3 text-center" *ngFor="let i of images">
         <img alt="Item Image" class="img-thumbnail img-responsive" [src]="imgUrl + i.file">
