--- a/src/app/front-store/slider-images/slider-images.component.html
+++ b/src/app/front-store/slider-images/slider-images.component.html
@@ -1,6 +1,6 @@
 <div class="container pd-top">
     <div class="col-md-12">
-        <carousel interval="6500" [noWrap]="noWrapSlides">
+        <carousel interval="6500">
             <slide *ngFor="let b of banners; let index=index">
                 <a [href]="b.link" [target]="b.target">
                     <img [src]="baseUrl + b.file" alt="image slide" style="display: block; width: 100%;">
