--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
+                <!-- <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="ti-bell"></i>
                         <p class="notification">5</p>
@@ -25,13 +25,13 @@
                         <li><a href="#">Notification 4</a></li>
                         <li><a href="#">Another notification</a></li>
                     </ul>
-                </li>
-                <li>
+                </li> -->
+                <!-- <li>
                     <a href="#">
                         <i class="ti-settings"></i>
                         <p>Configurações</p>
                     </a>
-                </li>
+                </li> -->
             </ul>
 
         </div>
