(fix: ux) Interactions

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,10 +1,8 @@
 <div class="sidebar-wrapper">
     <div class="logo">
         <a routerLink="dashboard" class="simple-text">
-            <!-- <div class="logo-img">
-                <img src="../../assets/img/angular2-logo.png" alt="">
-            </div> -->
-            damiipratii | ADMIN
+            <img src="../assets/img/damiipratii-logo-primary.png" class="img-responsive" alt="">
+            <small>Admin</small>
         </a>
     </div>
     <ul class="nav">
