--- a/src/app/dpt-seller/sidebar-seller/sidebar-seller.component.html
+++ b/src/app/dpt-seller/sidebar-seller/sidebar-seller.component.html
@@ -1,10 +1,8 @@
 <div class="sidebar-wrapper">
   <div class="logo">
       <a routerLink="consult" class="simple-text">
-          <!-- <div class="logo-img">
-              <img src="../../assets/img/angular2-logo.png" alt="">
-          </div> -->
-          damiipratii | VENDAS
+            <img src="../assets/img/damiipratii-logo-primary.png" class="img-responsive" alt="">
+            <small>Vendas</small>
       </a>
   </div>
   <ul class="nav">
