--- a/src/app/items/create-items/create-items.component.html
+++ b/src/app/items/create-items/create-items.component.html
@@ -22,13 +22,13 @@
             <div class="col-md-2">
                 <div class="form-group">
                     <label>Valor diário:</label>
-                    <input type="text" required class="form-control" [(ngModel)]="item.price" name="price">
+                    <input type="number" required class="form-control" [(ngModel)]="item.price" name="price">
                 </div>
             </div>
             <div class="col-md-2">
                 <div class="form-group">
                     <label>Valor da peça:</label>
-                    <input type="text" required class="form-control" [(ngModel)]="item.price_unit" name="price_unit">
+                    <input type="number" required class="form-control" [(ngModel)]="item.price_unit" name="price_unit">
                 </div>
             </div>
             <div class="col-md-10">
