--- a/src/app/users/create-user/create-user.component.html
+++ b/src/app/users/create-user/create-user.component.html
@@ -38,7 +38,8 @@
                     <label>Regra de acesso:</label>
                     <select class="form-control" [(ngModel)]="user.role" name="role">
                       <option value="1">Administrador</option>
-                      <option value="2">Vendedor</option>
+                      <option value="2">PDV</option>
+                      <option value="3">Vendedor</option>
                     </select>
                 </div>
             </div>
