--- a/src/app/remember-password/remember-password.component.html
+++ b/src/app/remember-password/remember-password.component.html
@@ -9,22 +9,18 @@
                             <div class="card" data-background="color" data-color="blue">
                                 <div class="card-header">
                                     <img class="logo-header img-responsive" src="../assets/img/damiipratii-logo-primary.png" alt="">
-                                    <h3 class="card-title">Credenciamento</h3>
+                                    <h3 class="card-title">Esqueci minha senha</h3>
                                 </div>
                                 <div class="card-content">
                                     <div class="form-group">
                                         <label>E-mail</label>
                                         <input class="form-control input-no-border" [(ngModel)]="user.email" name="email" required placeholder="Seu e-mail" type="email">
                                     </div>
-                                    <div class="form-group">
-                                        <label>Senha</label>
-                                        <input class="form-control input-no-border" [(ngModel)]="user.password" name="pass" placeholder="Senha" required type="password">
-                                    </div>
                                 </div>
                                 <div class="card-footer text-center">
-                                    <button class="btn btn-fill btn-wd" type="submit">Entrar</button>
+                                    <button class="btn btn-fill btn-wd" type="submit">Enviar</button>
                                     <div class="forgot">
-                                        <a routerLink="remember-password">Esqueceu sua senha?</a>
+                                        <a routerLink="login">Fazer login</a>
                                     </div>
                                 </div>
                             </div>
