(feat: password-reset) Add password reset components

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,7 +24,7 @@
                                 <div class="card-footer text-center">
                                     <button class="btn btn-fill btn-wd" type="submit">Entrar</button>
                                     <div class="forgot">
-                                        <a routerLink="remember-password">Esqueceu sua senha?</a>
+                                        <a routerLink="../remember-password">Esqueceu sua senha?</a>
                                     </div>
                                 </div>
                             </div>
