--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -24,19 +24,23 @@
                             <div class="card" data-background="color" data-color="blue">
                                 <div class="card-header">
                                     <img class="logo-header img-responsive" src="../assets/img/damiipratii-logo-primary.png" alt="">
-                                    <h3 class="card-title">Esqueci minha senha</h3>
-                                    <p>Enviaremos um e-mail com o link para você redefinir a senha de acesso</p>
+                                    <h3 class="card-title">Redefinir minha senha</h3>
+                                    <p>Olá {{ user.name }}! Quase lá! Agora só falta informar sua nova senha</p>
                                 </div>
                                 <div class="card-content">
                                     <div class="form-group">
-                                        <label>E-mail</label>
-                                        <input class="form-control input-no-border" [(ngModel)]="user.email" name="email" required placeholder="Seu e-mail" type="email">
+                                        <label>Nova senha</label>
+                                        <input class="form-control input-no-border" [(ngModel)]="user.pass1" name="pass1" required placeholder="Sua senha" type="password">
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Repita a nova senha</label>
+                                        <input class="form-control input-no-border" [(ngModel)]="user.pass2" name="pass2" required placeholder="Sua senha" type="password">
                                     </div>
                                 </div>
                                 <div class="card-footer text-center">
-                                    <button class="btn btn-fill btn-wd" type="submit">Enviar</button>
+                                    <button class="btn btn-fill btn-wd" *ngIf="user.pass1 && user.pass2 && user.pass1 == user.pass2" type="submit">Redefinir</button>
                                     <div class="forgot">
-                                        <a routerLink="../login">Fazer login</a>
+                                        <a routerLink="../../../">Página inicial</a>
                                     </div>
                                 </div>
                             </div>
@@ -45,12 +49,11 @@
                         <div *ngIf="success" class="card" data-background="color" data-color="blue">
                             <div class="card-header">
                                 <img class="logo-header img-responsive" src="../assets/img/damiipratii-logo-primary.png" alt="">
-                                <h3 class="card-title">E-mail enviado com sucesso!</h3>
-                                <p>Basta seguir o passo-a-passo informado no e-mail</p>
+                                <h3 class="card-title">Redefinição realizada com sucesso!</h3>
                             </div>
                             <div class="card-footer text-center">
                                 <div class="forgot">
-                                    <a routerLink="../login">Fazer login</a>
+                                    <a routerLink="../../login">Fazer login</a>
                                 </div>
                             </div>
                         </div>
