fix(dashboard) Show totals in admin dash

--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-lg-4 col-sm-6">
             <a routerLink="./">
                 <div class="card">
@@ -81,7 +81,7 @@
                 </div>
             </a>
         </div>
-    </div>
+    </div> -->
     <div class="row">
 
         <div class="col-md-12">
