feat(profile): Add profile component

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -26,12 +26,12 @@
                         <li><a href="#">Another notification</a></li>
                     </ul>
                 </li> -->
-                <!-- <li>
-                    <a href="#">
-                        <i class="ti-settings"></i>
-                        <p>Configurações</p>
+                <li>
+                    <a routerLink="profile">
+                        <i class="ti-user"></i>
+                        <p>{{userName}}</p>
                     </a>
-                </li> -->
+                </li>
             </ul>
 
         </div>
