feat(goals): Add seller goals component

--- a/src/app/dpt-pdv/dashboard-pdv/dashboard-pdv.component.html
+++ b/src/app/dpt-pdv/dashboard-pdv/dashboard-pdv.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="row">
+    <div class="row" *ngIf="data">
         <div class="col-lg-3 col-sm-6">
             <div class="card">
                 <div class="content">
@@ -12,14 +12,14 @@
                         <div class="col-xs-7">
                             <div class="numbers">
                                 <p>Produtos</p>
-                                89
+                                {{data.items}}
                             </div>
                         </div>
                     </div>
                     <div class="footer">
                         <hr />
                         <div class="stats">
-                            <i class="ti-reload"></i> Último registro a 2 dias
+                            <i class="ti-reload"></i> Cadastrados no sistema
                         </div>
                     </div>
                 </div>
@@ -37,14 +37,14 @@
                         <div class="col-xs-7">
                             <div class="numbers">
                                 <p>Clientes</p>
-                                265
+                                {{data.clients}}
                             </div>
                         </div>
                     </div>
                     <div class="footer">
                         <hr />
                         <div class="stats">
-                            <i class="ti-calendar"></i> Último cadastro feito 4 horas atrás
+                            <i class="ti-calendar"></i> Registrados na base
                         </div>
                     </div>
                 </div>
@@ -62,14 +62,14 @@
                         <div class="col-xs-7">
                             <div class="numbers">
                                 <p>Cancelamentos</p>
-                                2
+                                {{data.cancels}}
                             </div>
                         </div>
                     </div>
                     <div class="footer">
                         <hr />
                         <div class="stats">
-                            <i class="ti-timer"></i> Hoje
+                            <i class="ti-timer"></i> Até o momento
                         </div>
                     </div>
                 </div>
@@ -87,14 +87,14 @@
                         <div class="col-xs-7">
                             <div class="numbers">
                                 <p>Ordens</p>
-                                21
+                                {{data.orders}}
                             </div>
                         </div>
                     </div>
                     <div class="footer">
                         <hr />
                         <div class="stats">
-                            <i class="ti-reload"></i> Durante essa semana
+                            <i class="ti-reload"></i> Geradas
                         </div>
                     </div>
                 </div>
