--- a/src/app/dpt-seller/goals-seller/goals-seller.component.html
+++ b/src/app/dpt-seller/goals-seller/goals-seller.component.html
@@ -1,19 +1,63 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12" *ngIf="multi">
             <div class="card">
                 <div class="header">
-                    <h4 class="title">Metas e Comissões:</h4>
+                    <h4 class="title">Metas do mês:</h4>
                 </div>
-
                 <div class="content">
                     <div class="row">
                         <div class="col-md-12">
-                            <label>Metas do Mês:</label>
+                            <ngx-charts-bar-vertical-2d [view]="view" [scheme]="colorScheme" [results]="multi" [gradient]="gradient" [xAxis]="showXAxis"
+                                [yAxis]="showYAxis" [legend]="showLegend" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel"
+                                [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel">
+                            </ngx-charts-bar-vertical-2d>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="row">
+            <div class="col-md-12" *ngIf="goals">
+                <div class="card">
+                    <div class="header">
+                        <h4 class="title">Comissões do Mês:</h4>
+                    </div>
+                    <div class="content">
+                        <div class="row">
+                            <div class="col-md-12">
+                               <table class="table table-condensed table-hovered">
+                                   <thead> 
+                                       <tr>
+                                           <th>#</th>
+                                           <th>Entrada</th>
+                                           <th>Comissão</th>
+                                           <th>Registro</th>
+                                           <th>Ref. Pgto. Ordem</th>
+                                       </tr>
+                                   </thead>
+                                   <tbody>
+                                       <tr *ngFor="let c of goals.commissions">
+                                           <td>{{ c.id }}</td>
+                                           <td>{{ c.cashier.total | currency: "BRL" }}</td>
+                                           <td>{{ c.commission | currency: "BRL" }}</td>
+                                           <td>{{ c.created_at | date:"dd/MM/yyyy"}}</td>
+                                           <td># {{ c.cashier.order.code }}</td>
+                                       </tr>
+                                       <tr>
+                                           <td></td>
+                                           <td><strong>{{ totalCashier | currency: "BRL" }}</strong></td>
+                                           <td><strong>{{ totalCommission | currency: "BRL" }}</strong></td>
+                                           <td></td>
+                                           <td></td>
+                                       </tr>
+                                   </tbody>
+                               </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 </div>
