--- a/src/app/goals/goals-update/goals-update.component.html
+++ b/src/app/goals/goals-update/goals-update.component.html
@@ -37,7 +37,7 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label>Meta de vendedor:</label>
-                    <input type="text"  required class="form-control" [(ngModel)]="goal.goal_seller" name="goal_seller">
+                    <input type="text" required class="form-control" [(ngModel)]="goal.goal_seller" name="goal_seller">
                 </div>
             </div>
             <div class="col-md-6">
@@ -58,7 +58,7 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label>Comissão sob meta da loja alcançada:</label>
-                    <input type="text" required class="form-control" [(ngModel)]="goal.commission_store" name="commission_seller">
+                    <input type="text" required class="form-control" [(ngModel)]="goal.commission_store" name="commission_store">
                 </div>
             </div>
         </div>
