--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -6,40 +6,63 @@
                     <h4 class="title">Meu Perfil</h4>
                     <p class="category">Você pode editar suas informações:</p>
                 </div>
-                <div class="content">
+                <div class="content" *ngIf="user">
                     <div class="row">
                         <div class="col-md-12">
-                            <form (ngSubmit)="updateProfile()" ngNativeValidate>
-                              <div class="row">
-                                <div class="col-md-2 col-md-offset-5 text-center">
-                                  <img src="" class="img-responsive" alt="">
+                            <form (ngSubmit)="update()" ngNativeValidate>
+                                <div class="row">
+                                    <div class="col-md-2 col-md-offset-5 text-center">
+                                        <img [src]="imgUrl + user.avatar" class="img-responsive img-rounded" alt="">
+                                        <br>
+                                        <a *ngIf="!showUploader" class="btn btn-default" (click)="uploadImg(true)"> Mudar Foto</a>
+                                    </div>
                                 </div>
-                              </div>
-                              <div class="row">
-                                  <div class="col-md-4">
-                                      <div class="form-group">
-                                          <label>Nome:</label>
-                                          <input required type="date" [(ngModel)]="infos.name" name="name" class="form-control">
-                                      </div>
-                                  </div>
-                                  <div class="col-md-5">
-                                      <div class="form-group">
-                                          <label>E-mail:</label>
-                                          <input required type="email" disabled [(ngModel)]="infos.email" name="email" class="form-control">
-                                      </div>
-                                  </div>
-                                  <div class="col-md-3">
-                                      <div class="form-group">
-                                          <label>Foto:</label>
-                                          <input type="file" class="form-control">
-                                      </div>
-                                  </div>
-                              </div>
-                              <div class="row">
-                                  <div class="col-md-12">
-                                      <button class="btn btn-default btn-block" type="submit">ATUALIZAR</button>
-                                  </div>
-                              </div>
+                                <div class="row" *ngIf="showUploader">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <input class="form-control" type="file" ng2FileSelect [uploader]="uploader" />
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <a (ngDisable)="!item" class="btn btn-success btn-block" (click)="uploader.uploadAll()"><i class="fa fa-check-circle-o"></i> Enviar foto </a>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <a class="btn btn-default btn-block" (click)="uploadImg(false)"> Cancelar </a>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-8">
+                                        <div class="form-group">
+                                            <label>Nome:</label>
+                                            <input required type="text" [(ngModel)]="user.name" name="name" class="form-control">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="form-group">
+                                            <label>E-mail:</label>
+                                            <input required type="email" disabled [(ngModel)]="user.email" name="email" class="form-control">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <label>Nova senha:</label>
+                                            <input type="text" pattern=".{6,}" title="A senha deve ter pelo menos 6 caracteres" [(ngModel)]="user.password" name="pass1" class="form-control">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <label>Repita a nova senha:</label>
+                                            <input type="text" pattern=".{6,}" title="A senha deve ter pelo menos 6 caracteres" [(ngModel)]="user.password2" name="pass2" class="form-control">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <button *ngIf="user.password == user.password2" class="btn btn-success btn-block" type="submit">ATUALIZAR MEUS DADOS</button>
+                                    </div>
+                                </div>
                             </form>
                         </div>
                     </div>
